# Piecemeal

./: .gitignore  .hlint.yaml  Piecemeal.cabal  README.md  flake.nix  stack.yaml
.github/workflows/: ci.yml
src/: Main.hs
src/Piecemeal/: Empty.hs  Hello.hs  TypedValidator.hs
