cabal-version:      2.4
name:               Piecemeal
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Ardana Labs
maintainer:    ryanmatovu@gmail.com


executable Piecemeal
    other-modules:
      Piecemeal.Empty
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      either,
      generic-lens,
      ghc-prim,
      hedgehog -any,
      lens,
      text -any,
      mtl,
      playground-common,
      plutus-pab,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api,
      tasty -any,
      tasty-hedgehog -any,
      cardano-api -any,
      serialise -any,
      cardano-ledger-alonzo -any

    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
            -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-ignore-interface-pragmas -fno-specialise


